# estate-intelligence-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 2026_03_11_2306-d53862026f14_refactor_architecture_and_dvf.py  2026_03_11_2355-bf8330f6987f_apply_audit_mixin_and_h3.py
app/: main.py
app/core/: logging.py  middlewares.py  settings.py
app/core/exceptions/: base.py  handlers.py
app/core/schemas/: problem_details.py
app/domains/data_pipeline/infrastructure/: models.py
app/domains/map_configs/infrastructure/: models.py
app/domains/market_data/api/: dependencies.py  routers.py  schemas.py
app/domains/market_data/application/: services.py  unit_of_work.py
app/domains/market_data/domain/: entities.py  exceptions.py  repositories.py  services.py  value_objects.py
app/domains/market_data/infrastructure/: models.py  repositories.py
app/domains/profiles/infrastructure/: models.py
app/domains/searches/infrastructure/: models.py
app/infrastructure/: database.py
app/infrastructure/database/: metadata.py  mixins.py
scripts/: calculate_grids.py  data_cleaning.py  ingest_dvf.py  populate_db.py
supabase/: config.toml
